Add: New TailwindCSS config project

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,9 @@
+/** === Tailwind Components*/
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/** === ROOT === */
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -12,7 +18,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+/** ==== Styles CSS  ==== */
 a {
   font-weight: 500;
   color: #646cff;
