--- a/style.css
+++ b/style.css
@@ -81,11 +81,14 @@ hr {
 .container {
   overflow: hidden;
   position: relative;
-  width: inherit;
-  height: inherit; 
+  width: 100%;
+  height: 100vh; 
  /*  top: 20px;
   left: 20px; */
-  background: #f5f5f5;
+  background-size: cover;
+  object-fit: cover;
+  background-position: center;
+  background-repeat:no-repeat;
 }
 
 .container .slider .item {
@@ -144,9 +147,9 @@ hr {
 }
 
 .item .content {
-  position: absolute;
+  position: relative; /* -Absolute- */
   top: 50%;
-  left: 50px;
+  left: -350px; /* -50px- */
   width: 300px;
   text-align: left;
   color: #eee;
