Add: New display Landing Page

--- a/style.css
+++ b/style.css
@@ -14,6 +14,15 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* --clr-White: #f2f2f2,
+  --clr-black: #333,
+  --primary: #44AFF2, 
+  --secondary: "#F20F79",
+  --third: "#F2913D",
+  --primary-dark: "#138AF2", 
+  --primary-light: "#04ADBF", 
+  --clr-blueExtra: "#6374ae", */
 }
 /** ==== Styles CSS  ==== */
 * {
@@ -93,13 +102,13 @@ hr {
 }
 
 .container .slider .item {
-  width: 165px;
-  height: 250px;
+  /* width: 165px;
+  height: 250px; */
   position: absolute;
   top: 50%;
   transform: translate(0, -50%);
   border-radius: 20px;
-  box-shadow: 0 30px 50px #505050;
+  box-shadow: 0 15px 35px #333;
   background-position: 50% 50%;
   background-size: cover;
   display: inline-block;
@@ -117,8 +126,8 @@ hr {
 .slider .item:nth-child(2) {
   top: 0;
   left: 0;
-  transform: translate(0, 0);
-  border-radius: 5px;
+ /*  transform: translate(0, 0);
+  border-radius: 5px; */
   width: 100%;
   height: 100%;
   z-index: 0;
@@ -148,9 +157,9 @@ hr {
 
 .item .content {
   position: relative; /* -Absolute- */
-  top: 50%;
-  left: -350px; /* -50px- */
-  width: 300px;
+ /*  top: 50%; */
+  /* left: -350px; */ /* -50px- */
+  /* width: 300px; */
   text-align: left;
   color: #eee;
   transform: translate(0, -50%);
@@ -183,6 +192,10 @@ hr {
   cursor: pointer;
   opacity: 0;
   animation: animate 1s ease-in-out 0.6s 1 forwards;
+  border-radius: 0.8rem;
+}
+.content button:active{
+  transform: scale(0.9);
 }
 
 @keyframes animate {
